@@ -8,6 +8,7 @@ Python code to invert S-wave displacement spectra
 Derived from sspec_v1.0.sh by Aldo Zollo and Claudio Satriano
 
 v0.9 -
+	- Traces are filtered before computing S/N ratio
 	- Code cleaning and optimization
 v0.8 - 2014-07-11
 	- Trace plot showing S and noise time windows
